Add 'exportsTo' configuration option for whitebox tests
Resolves #67